@@ -345,6 +345,8 @@ The following extensions are migrated into MediaWiki 1.14:
   descending order.
 * (bug 15995) Add cmstartsortkey and cmendsortkey parameters to
   list=categorymembers
+* (bug 16017) list=categorymembers sets invalid continue parameters for
+  sortkeys containing pipes
 
 === Languages updated in 1.14 ===
 
